# hw_2_8

./: pyproject.toml
part_1/: models.py  quotes.json  search.py  seed.py
part_2/: consumer_email.py  consumer_sms.py  model_contact.py  producer.py
