[tool.poetry]
name = "hw-2-8"
version = "0.1.0"
description = ""
authors = ["ZatokaV <zatokav@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_2_8"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.25.0"
redis = "^4.4.2"
redis-lru = "^0.1.2"
pika = "^1.3.1"
faker = "^16.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

